2007-12-18  Matthieu Nottale  <nottale@gostai.com>

	vc++ headers do not know S_IS_DIR.
	* file-system.cc: Use _S_IFDIR fag instead of IS_DIR macro for vc++.

2007-12-18  Matthieu Nottale  <nottale@gostai.com>

	Define and use ATTRIBUTE_NORETURN.
	* cli.hh: Use ATTRIBUTE_NORETURN.
	* compiler.hh: Define ATTRIBUTE_NORETURN.
	* contract.hh,
	* sysexits.hh: Use ATTRIBUTE_NORETURN.

2007-12-18  Loic Fosse  <fosse@gostai.com>

	Add file-system containing is_dir.
	* Makefile.am, libport-sources.mk: Adjust.
	* file-system.cc, file-system.hh: New.

2007-12-18  Matthieu Nottale  <nottale@gostai.com>

	Replace __noreturn__ with noreturn.
	* cli.hh: __noreturn__->noreturn.
	* contract.hh: Remove duplicate __attribute__ handling code, include
	    compiler.hh.

2007-12-18  Matthieu Nottale  <nottale@gostai.com>

	#define __attribute __declspec for vc++.
	* cli.hh: Put __attribute__ at the beginning of declaration.
	* compiler.hh: define __attribute__ __declspec for vc++.
	* sysexits.cc: Revert my previous patch returning value in noreturn
	  func.
	* sysexits.hh: Put __attribute__ at the beginning of declaration.

2007-12-18  Akim Demaille  <demaille@gostai.com>

	make_tokenizer.
	* tokenizer.hh, tokenizer.cc: New.
	* Makefile.am, libport-sources.mk: Adjust.

2007-12-18  Matthieu Nottale  <nottale@gostai.com>

	Fix missing return value.
	* sysexits.cc: Here.

2007-12-17  Akim Demaille  <demaille@gostai.com>

	libport::exit.
	* cli.cc: Use it.
	* libport-sources.mk: Adjust.
	* sysexits.hh, sysexits.cc (libport::exit): New.

2007-12-17  Akim Demaille  <demaille@gostai.com>

	program_name.
	* program-name.hh, program-name.cc: New.
	* Makefile.am, cli.cc, libport-sources.mk: Adjust.
	* sysexits.hh: No longer try to use sysexits.h.
	Add our own EX_SKIP and EX_HARD.

2007-12-14  Akim Demaille  <demaille@gostai.com>

	Fix Doxumentation.
	* sysexits.hh: here.

2007-12-14  Akim Demaille  <demaille@gostai.com>

	cli.
	* cli.cc, cli.hh, cli.hxx: New.