@@ -13,7 +13,7 @@
 namespace libport
 {
 
-  template <class C, class S>
+  template <typename C, typename S>
   inline
   separator<C, S>::separator (const C& c, const S& s)
     : container_ (c),
@@ -21,7 +21,7 @@ namespace libport
   {
   }
 
-  template <class C, typename S>
+  template <typename C, typename S>
   inline std::ostream&
   separator<C, S>::operator() (std::ostream& o) const
   {
@@ -37,21 +37,43 @@ namespace libport
     return o;
   }
 
-  template <class C, typename S>
+  template <typename C, typename S>
   separator<C, S>
   separate (const C& c, const S& s)
   {
     return separator<C, S> (c, s);
   }
 
-  template <class C>
+#if 0
+  // Checking whether it makes it easier for some compilers:
+  /*
+    ast/nary.cc(107) : error C2780: 'libport::separator<C,char> libport::separate(const C &)' : expects 1 arguments - 2 provided
+    
+    C:/cygwin/home/build/kernel2/kernel2_winxp_vcxx/build/libport/separator.hh(33) : see declaration of 'libport::separate'
+    
+    ast/nary.cc(107) : error C2784: 'libport::separator<C,S> libport::separate(const C &,const S &)' : could not deduce template argument for 'overloaded function type' from 'overloaded function type'
+    
+    C:/cygwin/home/build/kernel2/kernel2_winxp_vcxx/build/libport/separator.hh(28) : see declaration of 'libport::separate'
+    
+    ast/nary.cc(107) : error C2784: 'libport::separator<C,S> libport::separate(const C &,const S &)' : could not deduce template argument for 'const C &' from 'const ast::exec_exps_type'
+    
+    C:/cygwin/home/build/kernel2/kernel2_winxp_vcxx/build/libport/separator.hh(28) : see declaration of 'libport::separate'
+    
+  */
+
+  /*
+    ast/nary.cc: In function `std::ostream& ast::operator<<(std::ostream&, const ast::exec_exps_type&)':
+    ast/nary.cc:107: error: no matching function for call to `separate(const std::list<ast::exec_exp_type, std::allocator<ast::exec_exp_type> >&, std::ostream&(&)(std::ostream&))'
+   make[3]: *** [nary.lo] Error 1
+  */
+    template <typename C>
   separator<C, char>
   separate (const C& c)
   {
     return separate (c, '\n');
   }
-
-  template <class C, typename S>
+#endif
+  template <typename C, typename S>
   inline std::ostream&
   operator<< (std::ostream& o, const separator<C, S>& s)
   {
